cmake_minimum_required(VERSION 2.8)
if (POLICY CMP0042)
	cmake_policy(SET CMP0042 NEW)
endif()

project(enut)
set(VERSION 1.1.2)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")

include(CheckCXXSourceCompiles)
include(${PROJECT_SOURCE_DIR}/cmake/Macros.cmake)

set(ENUT_EXTERNAL_INCLUDES "")
set(ENUT_INTERNAL_INCLUDES "")
set(ENUT_LINK_LIBS "")

add_additional_stuff(ENUT_EXTERNAL_INCLUDES ENUT_LINK_LIBS)
get_install_directory(LIBRARY_INSTALL_DIR)

message(STATUS "${LIBRARY_INSTALL_DIR}")

find_package(ErrUt REQUIRED)
list(APPEND ENUT_EXTERNAL_INCLUDES "${ERRUT_INCLUDE_DIRS}")
list(APPEND ENUT_LINK_LIBS "${ERRUT_LIBRARIES}")

# Check IPv6 support
if (NOT MSVC)
	check_cxx_source_compiles("#if defined(WIN32) || defined(_WIN32_WCE)\n#include <winsock2.h>\n#include <ws2tcpip.h>\n#ifndef _WIN32_WCE\n#include <sys/types.h>\n#endif // !_WIN32_WCE\n#else\n#include <sys/types.h>\n#include <sys/socket.h>\n#include <netinet/in.h>\n#endif // WIN32 || _WIN32_WCE\nint main(void)\n{\nstruct sockaddr_in6 addr;\naddr.sin6_family = PF_INET6;\nreturn 0;\n}\n" TMP_IPV6)
else (NOT MSVC)
	set(TMP_IPV6 FALSE)
endif (NOT MSVC)
support_option("IPv6 support" ENUT_SUPPORT_IPV6 NUTCONFIG_SUPPORT_IPV6 ${TMP_IPV6} "// No IPv6 support")

# If IPv6 is available, check IPv6 multicast support
if (ENUT_SUPPORT_IPV6)
	check_cxx_source_compiles("#if defined(WIN32) || defined(_WIN32_WCE)\n	#include <winsock2.h>	\n	#include <ws2tcpip.h>\n	#ifndef _WIN32_WCE\n		#include <sys/types.h>\n	#endif // !_WIN32_WCE\n#else \n	#include <sys/types.h>\n	#include <sys/socket.h>\n	#include <netinet/in.h>\n#endif // WIN32 || _WIN32_WCE\n\nint main(void)\n{\n	int testval;\n	struct ipv6_mreq mreq,mreq2;\n	mreq = mreq2; // avoid 'unused variable'\n	testval = IPV6_MULTICAST_HOPS;\n	testval = IPV6_JOIN_GROUP;\n	testval = IPV6_LEAVE_GROUP;\n	return 0;\n}\n" TMP_IPV6MCAST)
else (ENUT_SUPPORT_IPV6)
	set(TMP_IPV6MCAST FALSE)
endif (ENUT_SUPPORT_IPV6)
support_option("IPv6 multicast support" ENUT_SUPPORT_IPV6MCAST NUTCONFIG_SUPPORT_IPV6_MULTICAST ${TMP_IPV6MCAST} "// No IPv6 multicast support")

check_cxx_source_compiles("#include <sys/types.h>\n	#include <sys/socket.h>\n	#include <netinet/in.h>\n\n	int main(void)\n	{\n		int t = IP_PKTINFO;\n		return 0;\n	}\n" TMP_PKTINFO)
if (TMP_PKTINFO)
	set(NUTCONFIG_SUPPORT_IPPKTINFO "#define NUTCONFIG_SUPPORT_IPPKTINFO")
else (TMP_PKTINFO)
	set(NUTCONFIG_SUPPORT_IPPKTINFO "// No IP_PKTINFO support")
endif (TMP_PKTINFO)

check_cxx_source_compiles("#include <sys/types.h>\n	#include <sys/socket.h>\n	#include <netinet/in.h>\n\n	int main(void)\n	{\n		int t = MSG_NOSIGNAL;\n		return 0;\n	}\n" TMP_MSGNOSIG)
if (TMP_MSGNOSIG)
	set(NUTCONFIG_SUPPORT_MSGNOSIGNAL "#define NUTCONFIG_SUPPORT_MSGNOSIGNAL")
else (TMP_MSGNOSIG)
	set(NUTCONFIG_SUPPORT_MSGNOSIGNAL "// No MSG_NOSIGNAL support")
endif (TMP_MSGNOSIG)

check_cxx_source_compiles("#include <sys/types.h>\n	#include <sys/socket.h>\n	#include <netinet/in.h>\n	#include <signal.h>\n\n	int main(void)\n	{\n		int t = SO_NOSIGPIPE;\n		return 0;\n	}\n" TMP_NOSIGPIPE)
if (TMP_NOSIGPIPE)
	set(NUTCONFIG_SUPPORT_SONOSIGPIPE "#define NUTCONFIG_SUPPORT_SONOSIGPIPE")
else (TMP_NOSIGPIPE)
	set(NUTCONFIG_SUPPORT_SONOSIGPIPE "// No SO_NOSIGPIPE support")
endif (TMP_NOSIGPIPE)

find_package(ENet)
if (ENET_FOUND)
	set(TMP TRUE)
else (ENET_FOUND)
	set(TMP FALSE)
endif (ENET_FOUND)

support_option("Flag indicating if the ENet protocol should be supported. Note that the multicast tunnel server depends on ENet." ENUT_SUPPORT_ENET NUTCONFIG_SUPPORT_ENET ${TMP} "// No ENet support")
if (ENET_FOUND AND ENUT_SUPPORT_ENET)
	list(APPEND ENUT_EXTERNAL_INCLUDES "${ENET_INCLUDE_DIRS}")
	list(APPEND ENUT_LINK_LIBS "${ENET_LIBRARIES}")
endif (ENET_FOUND AND ENUT_SUPPORT_ENET)

find_path(SYS_POLL_H sys/poll.h)
if (SYS_POLL_H)
	set(NUTCONFIG_SUPPORT_POLL "#define NUTCONFIG_SUPPORT_POLL")
else (SYS_POLL_H)
	set(NUTCONFIG_SUPPORT_POLL "// No support for 'poll' function")
endif (SYS_POLL_H)

check_cxx_source_compiles("#include <stdint.h>\nint main(void) { uint32_t x = 0; uint32_t y = x; return 0; }" ENUT_STDINT)
if (ENUT_STDINT)
	set(ENUT_INTTYPE_HEADERS "#include <stdint.h>\n")
else (ENUT_STDINT)
	check_cxx_source_compiles("#include <inttypes.h>\nint main(void) { uint32_t x = 0; uint32_t y = x; return 0; }" ENUT_INTTYPES)
	if (ENUT_INTTYPES)
		set(ENUT_INTTYPE_HEADERS "#include <inttypes.h>\n")
	else (ENUT_INTTYPES)
		if (MSVC)
			set(ENUT_INTTYPE_HEADERS "#include \"nuttypes_win.h\"")
		else (MSVC)
			set(ENUT_INTTYPE_HEADERS "#error Could not find header files that define types like 'uint32_t'. Please edit the file ${PROJECT_BINARY_DIR}/src/nuttypes.h and make sure that the following types are defined: int8_t, uint8_t, int16_t, uint16_t, int32_t, uint32_t, int64_t, uint64_t")
			message("\n\nError: Could not find header files that define types like 'uint32_t'.\nPlease edit the file ${PROJECT_BINARY_DIR}/src/nuttypes.h\nand make sure that the following types are defined: \nint8_t, uint8_t, int16_t, uint16_t, int32_t, uint32_t, int64_t, uint64_t\n\n")
		endif (MSVC)
	endif (ENUT_INTTYPES)
endif (ENUT_STDINT)
if (MSVC)
	set(ENUT_WINSOCK_HEADERS "#if defined(WIN32) || defined(_WIN32_WCE)\n	#include <winsock2.h>	\n	#include <ws2tcpip.h>\n#ifndef _WIN32_WCE\n	#include <sys/types.h>\n#endif // _WIN32_WCE\n#endif // WIN32 || _WIN32_WCE\n")
endif (MSVC)

if (MSVC)
	list(APPEND ENUT_LINK_LIBS "ws2_32")
endif (MSVC)

if (MSVC)
	set(ENUT_COMPILE_STATIC ON CACHE BOOL "Flag indicating if a static library should be built, or a dynamic one")
endif (MSVC)
if (NOT MSVC OR ENUT_COMPILE_STATIC)
	set(ENUT_IMPORT "")
	set(ENUT_EXPORT "")
else (NOT MSVC OR ENUT_COMPILE_STATIC)
	set(ENUT_IMPORT "__declspec(dllimport)")
	set(ENUT_EXPORT "__declspec(dllexport)")
endif (NOT MSVC OR ENUT_COMPILE_STATIC)

configure_file("${PROJECT_SOURCE_DIR}/src/nutconfig.h.in" "${PROJECT_BINARY_DIR}/src/nutconfig.h")
configure_file("${PROJECT_SOURCE_DIR}/src/nuttypes.h.in" "${PROJECT_BINARY_DIR}/src/nuttypes.h")

list(APPEND ENUT_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/src")
list(APPEND ENUT_INTERNAL_INCLUDES "${PROJECT_BINARY_DIR}/src")

add_subdirectory(src)
add_subdirectory(programs)

if (NOT MSVC)
	set(ENUT_LIBS "-L${LIBRARY_INSTALL_DIR}" "-lenut")
else (NOT MSVC)
	set(ENUT_LIBS optimized "${LIBRARY_INSTALL_DIR}/enut.lib" 
		      debug "${LIBRARY_INSTALL_DIR}/enut_d.lib")
endif (NOT MSVC)

set(ENUT_INCDIRS ${ENUT_EXTERNAL_INCLUDES} ${CMAKE_INSTALL_PREFIX}/include)
set(ENUT_LIBS ${ENUT_LIBS} ${ENUT_LINK_LIBS})
remove_empty(ENUT_INCDIRS)
list(REMOVE_DUPLICATES ENUT_INCDIRS)
remove_empty(ENUT_LIBS)

foreach(ARG ${ENUT_LIBS})
	set(ENUT_LIBS_CMAKECONFIG "${ENUT_LIBS_CMAKECONFIG} \"${ARG}\"")
endforeach()
foreach(ARG ${ENUT_INCDIRS})
	set(ENUT_INCDIRS_CMAKECONFIG "${ENUT_INCDIRS_CMAKECONFIG} \"${ARG}\"")
endforeach()

configure_file("${PROJECT_SOURCE_DIR}/cmake/ENUtConfig.cmake.in" "${PROJECT_BINARY_DIR}/cmake/ENUtConfig.cmake")
install(FILES "${PROJECT_BINARY_DIR}/cmake/ENUtConfig.cmake" DESTINATION ${LIBRARY_INSTALL_DIR}/cmake/ENUt)

