AC_INIT(configure.in)
AM_INIT_AUTOMAKE(enut, 1.1.0)

NUTCONFIG_SUPPORT_ENET="// No ENet support"
NUTCONFIG_SUPPORT_IPV6="// No IPv6 support"
NUTCONFIG_SUPPORT_IPV6_MULTICAST="// No IPv6 multicast support"
NUTCONFIG_SUPPORT_POLL="// No 'poll()' support"
NUTLINKLIBS="$LDFLAGS"
NUTINCLUDES="$CPPFLAGS"

AC_LANG(C++)
AC_PROG_CXX
AM_PROG_LIBTOOL

dnl ---------------------------------------------------------------------------
dnl Check errut/errorbase.h
dnl ---------------------------------------------------------------------------

AC_CHECK_HEADER(errut/errorbase.h, [], 
		[ 
		 AC_MSG_FAILURE(ErrUt needs to be available. See http://research.edm.uhasselt.be/jori/errut/) 
		], [])

dnl ---------------------------------------------------------------------------
dnl Check IPv6 support
dnl ---------------------------------------------------------------------------

ipv6support="no"

AC_ARG_ENABLE(IPv6,[  --disable-IPv6          Disable support for IPv6],[
	if test "$enableval" = yes ; then
		ipv6support="yes"
	else
		ipv6support="no"
	fi],[
	ipv6support="yes"
	])

if test "$ipv6support" = "yes" ; then

	if test "$cross_compiling" = yes  ; then
		cat << EOF

ABOUT IPv6 SUPPORT:

  Can't check if IPv6 support is possible when cross-compiling. For now, lets
  assume that you want IPv6 support enabled. To disable it, comment the two
  appropriate lines in src/nutconfig_unix.h before running make.

EOF
	else
	
		AC_MSG_CHECKING(IPv6 support)
		AC_RUN_IFELSE([
			#include <sys/types.h>
			#include <sys/socket.h>
			int main(void)
			{
			int s;
		
			s = socket(PF_INET6,SOCK_DGRAM,0);
			if (s < 0)
				return -1;
			return 0;
			}
			],
			[AC_MSG_RESULT(enabled)
				NUTCONFIG_SUPPORT_IPV6="#define NUTCONFIG_SUPPORT_IPV6"
				
			dnl ---------------------------------------------------------------------------
			dnl Check if multicast options are known
			dnl ---------------------------------------------------------------------------
			
			AC_MSG_CHECKING(if necessary options for IPv6 multicasting are available)
			AC_COMPILE_IFELSE([
				#include <sys/types.h>
				#include <sys/socket.h>
				#include <netinet/in.h>
		
				int main(void)
				{
					int testval;
					struct ipv6_mreq mreq,mreq2;
					mreq = mreq2; // avoid 'unused variable'
					testval = IPV6_MULTICAST_HOPS;
					testval = IPV6_JOIN_GROUP;
					testval = IPV6_LEAVE_GROUP;
					return 0;
				}
				],[
				AC_MSG_RESULT(yes)
				NUTCONFIG_SUPPORT_IPV6_MULTICAST="#define NUTCONFIG_SUPPORT_IPV6_MULTICAST"],
				AC_MSG_RESULT(no))],
			[
			AC_MSG_RESULT(disabled)
			])
	fi
fi

dnl ---------------------------------------------------------------------------
dnl Check ENet support
dnl ---------------------------------------------------------------------------

AC_CHECK_HEADER(enet/enet.h, [NUTCONFIG_SUPPORT_ENET="#define NUTCONFIG_SUPPORT_ENET"
			      NUTLINKLIBS="$NUTLINKLIBS -lenet"])

dnl ---------------------------------------------------------------------------
dnl Check support for 'poll()'
dnl ---------------------------------------------------------------------------

AC_CHECK_HEADER(sys/poll.h, [NUTCONFIG_SUPPORT_POLL="#define NUTCONFIG_SUPPORT_POLL"])

dnl ---------------------------------------------------------------------------
dnl Finished
dnl ---------------------------------------------------------------------------

AC_SUBST(NUTCONFIG_SUPPORT_ENET)
AC_SUBST(NUTCONFIG_SUPPORT_IPV6)
AC_SUBST(NUTCONFIG_SUPPORT_IPV6_MULTICAST)
AC_SUBST(NUTCONFIG_SUPPORT_POLL)
AC_SUBST(NUTINCLUDES)
AC_SUBST(NUTLINKLIBS)

AC_OUTPUT(Makefile \
	  src/Makefile \
	  src/nutconfig_unix.h \
          doc/Makefile \
	  pkgconfig/Makefile \
	  pkgconfig/enut.pc \
	  pkgconfig/enut-uninstalled.pc \
	 )

