noinst_PROGRAMS = packetforwarder udpportecho udpportdiscover autoforwarder
packetforwarder_SOURCES = packetforwarder.cpp
autoforwarder_SOURCES = autoforwarder.cpp
udpportecho_SOURCES = udpportecho.cpp
udpportdiscover_SOURCES = udpportdiscover.cpp
INCLUDES = -I ../src/ -I /usr/local/include/jthread/
LDFLAGS = ../src/.libs/libnetutil.a -ljthread -lpthread

